--- a/index.html
+++ b/index.html
@@ -89,5 +89,24 @@
             document.body.classList.add('page-loaded');
         });
     </script>
+    <script type="module">
+  // Import the functions you need from the SDKs you need
+  import { initializeApp } from "https://www.gstatic.com/firebasejs/12.2.1/firebase-app.js";
+  // TODO: Add SDKs for Firebase products that you want to use
+  // https://firebase.google.com/docs/web/setup#available-libraries
+
+  // Your web app's Firebase configuration
+  const firebaseConfig = {
+    apiKey: "AIzaSyDiIceiPVyfJD8-UpP3p58xHhybPwKGxKw",
+    authDomain: "yeggabase-discography.firebaseapp.com",
+    projectId: "yeggabase-discography",
+    storageBucket: "yeggabase-discography.firebasestorage.app",
+    messagingSenderId: "101982596342",
+    appId: "1:101982596342:web:55781bd23e4a2db94ed0d7"
+  };
+
+  // Initialize Firebase
+  const app = initializeApp(firebaseConfig);
+</script>
 </body>
 </html>
